alien4cloud-ui/src/main/webapp/styles/main.scss
@charset 'utf-8';
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
@import "bootstrap_variables";
@import "alien-variables";

$fa-font-path: "../bower_components/font-awesome/fonts" !default;
@import "font-awesome/scss/font-awesome";

@import 'bootstrap-sass-official/assets/stylesheets/bootstrap';

// fonts
@import "helveticaneue-thin";
@import "roboto-thin";

@import "a4c_forms";
@import "a4c_power_toggle";
@import "ace-editor";
@import "application";
@import "bold-override";
@import "dragdrop";
@import "editable";
@import "fileupload";
@import "form-generator";
@import "hopscotch";
@import "horizontal-menu";
@import "lang";
@import "location-resources-directive";
@import "plans";
@import "search-directive";
@import "topology-plan";
@import "topology-svg";
@import "topology";
@import "tree-control";
@import "users";
@import "vertical-menu";

// Navbar and global layout

.navbar-logout-dropdown {
  z-index: 2000;
}

.navbar-brand {
  padding: 0 5px;
}

.navbar-form div {
  margin-right: 5px;
}

#navbar-rightdrop {
  padding-top: 13px;
  padding-bottom: 13px;
}

@media all and (min-width: $screen-sm-min) and (max-width: $screen-md-min) {
  #alien-navbar-collapse i + span {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    margin-bottom: -3px;
    width: 39px;
    height: 18px;
    text-overflow: ellipsis;
  }

  #alien-navbar-collapse input {
    width: 104px;
  }

  #alien-navbar-collapse input[placeholder] {
    text-overflow: ellipsis;
  }
}

.main-view {
  margin-top: 60px;
}

@media(min-width: $screen-sm-min) {
  .main-view {
    margin-left: 20px;
    margin-right: 20px;
  }
}

@media(min-width: $screen-md-min) {
  .main-view {
    margin-left: 20px;
    margin-right: 20px;
  }
}

// Scrafolding additions

.row-margin {
  margin-bottom: 10px;
}

.indent {
  padding-left: 15px;
}

// Navbar and global layout end
a {
  cursor: pointer;
}

.no-browser-apparence{
  -webkit-appearance:none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  appearance: none;
}

.fa-smaller {
  font-size: 0.6666666666em;
}

.form-control-noheightlimit {
  height: auto;
  min-height: $input-height-base;
  @extend .form-control;
}

// confirm popover
[confirm-popup].popover {
  display: block !important;
}

.popover-content[ng-bind] {
  white-space: pre-line;
}

/*pagination*/
.pagination-div {
  text-align: center;
}

.pagination-div ul {
  cursor: pointer;
}

a.accordion-toggle[ng-click] {
  text-decoration: none;
}

.facet-category {
  border-top: 1px solid #ddd;
  font-weight: 500;
  font-style: italic;
  color: gray;
  margin-top: 10px;
  padding-bottom: 5px;
  padding-left: 5px;
  padding-top: 10px;
}

.facet-category-active {
  color: inherit;
  font-style: normal;
  cursor: pointer;
}

.facet-category-active:hover{
  background-color: whitesmoke;
}

.facet-choice .nav > li > a {
  display: block;
  font-size: 13px;
  font-weight: 500;
  padding: 4px 5px;
}

.facet-choice .nav > li > a:hover {
  background-color: transparent;
  border-left: 1px solid #d9534f;
  color: #d9534f;
  padding-left: 4px;
  text-decoration: none;
}

.facet-option .nav > li > a {
  display: block;
  font-size: 13px;
  font-weight: 500;
  padding: 4px 5px;
}

.facet-option .nav > li > a:hover {
  background-color: transparent;
  border-left: 1px solid $brand-primary;
  padding-left: 4px;
  text-decoration: none;
}

.filter-category {
  border-top: 1px solid #ddd;
  margin-top: 10px;
  padding-top: 10px;
}

.clickable-media:hover {
  background-color: whitesmoke;
  cursor: pointer;
}

.well.component-detail-side.affix {
  top: 60px;
  width: 373px;
}

.center {
  text-align: center;
}

.align-right {
  text-align: right;
}

.detail-bloc {
  margin-top: 20px;
}

fieldset legend {
  border-bottom: 1px solid $brand-primary;
}

.detail-bloc > div {
  background-color: white;
}

.table tr:first-child td {
  border-top: none;
}

.separator-h {
  border-top: 1px solid $brand-primary;
}

#sideBar {
  position: fixed;
}

/* Components */

.application-deploy-button {
  width: 115px;
}

.starHover {
  color: $brand-primary;
}

.searchModal .modal-dialog {
  overflow-y: auto;
  width: 95%;
}

.newImageModal .modal-dialog {
  width: 50%;
}

.newImageModal .modal-dialog #genericformtypescontainer{
  height: 450px;
  overflow: inherit;
}

/* icons*/
img.icon_16 {
  height: 16px;
  width: 16px;
}

img.icon_24 {
  height: 24px;
  width: 24px;
}

img.icon_32 {
  height: 32px;
  width: 32px;

}

.input-group {
  border-spacing: 0;
}

.info {
  cursor: pointer;
}

.vertical-center {
  vertical-align: middle;
}

.large-data-container {
  background-color: white;
  border: 1px solid #ddd;
  padding: 6px;
}

.option-selected {
  font-style: italic;
}

.option-selected:HOVER,
.option-selected > a,
.option-selected > a:HOVER {
  cursor: default;
}

/* Toaster directive div : error message */
.toast-top-right {
  right: 12px;
  top: 55px;
  width: 100%;
}

#toast-container.toast-top-right > div {
  width: 96%;
}

@media(min-width: $screen-sm-min) {
  .toast-top-right {
    width: 50%;
  }
}

@media(min-width: $screen-md-min) {
  .toast-top-right {
    width: 600px;
  }
}

/* End : Toaster directive div : error message */

/* Vertical aligne for delete button in details pages (with xeditable spans) */
.confirm-button-delete {
  display: inline-block;
  margin-top: $line-height-computed + 3;
  vertical-align: top;
}

/* Restected logo customized */
.restricted-img {
  -moz-filter: grayscale(1);
  -ms-filter: grayscale(1);
  -o-filter: grayscale(1);
  -webkit-filter: grayscale(1);
  filter: grayscale(1);
}

.clouds-add-image .modal-dialog {
  overflow-y: auto;
  width: 70%;
  height: 95%;
}

.new-images-selected-modal {
  overflow: auto;
  height: 362px;
}

.new-images-selected-modal .images-not-selected {
  text-align: center;
  font-size: 25px;
  color: #C8C8C8;
  font-weight: 500;
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  margin-left: auto;
  margin-right: auto;
}

#cloud-template-details {
  position: fixed;
  top: 117px;
  width: 46%;
}

.title-border {
  border-bottom: 1px solid $brand-primary;
}

.padding-right {
  padding-right: 5px;
}

.resizable-bar {
  cursor: col-resize;
  z-index: 10;
}

.splitter-icon {
  height: 20px;
  position: absolute;
  top: 50%;
  // left: 0%;
  right: 0%;
}

.btn-transparent {
  background-color: transparent;
  border-color: transparent;
}

.btn-transparent:active {
  box-shadow: none;
}

.alien-table-row {
  border-width: 0px 0px 1px 0px;
  border-style: solid;
  border-color: #DDD;
  padding: 8px;
}

.alien-table-row:last-of-type {
  border-width: 0px 0px 0px 0px;
}

.alien-table-child-row {
  padding-top: 4px;
  padding-bottom: 0px;
}

.empty-place-holder {
  font-weight: bold;
  font-style: italic;
  padding: 0.5em;
}

.location-match {
  color: #2a6496;
  display: block;
  padding: 4px;
  margin-bottom: 20px;
  line-height: 1.428571429;
  border: 1px solid #ddd;
  border-radius: 4px;
  transition: all 0.2s ease-in-out;
}

.location-match-selected {
  background-color: #dff0d8;
  border-color: #d6e9c6;
}
.location-match-danger {
  background-color: #f2dede;
  border-color: #ebccd1;
  color: #b94a48;
}

.item-disabled {
    color: #999999;
    text-decoration: none;
    background-color: transparent;
    cursor: not-allowed;
}

.nav > li.tab-label > a {
  font-weight: 500;
  color: #333333;
}
.nav > li.tab-label > a:hover {
  border-color: rgba(0, 0, 0, 0);
  font-weight: 500;
  color: #333333;
  cursor: default;
}

.content-head {
  font-weight: 500;
  margin-bottom: 5px;
  border-bottom: 1px solid $brand-primary;
  padding-bottom: 5px;
}

.content-body {
  padding-left: 0.5em;
}


/*parsing errors*/
.parsing-error-table tr td:last-child {
  white-space: pre-wrap;
  width: 70%;
  text-align: center;
}

.detail-term {
  padding-top: 0.5em;
  font-weight: 500;
  text-align: left;
  display: inline-block;
  width: 50%;
}

.detail-description {
  display: inline-block;
}

.info-sm .fa {
  font-size: 1.5em;
}

.info-lg .fa {
  font-size: 2em;
}
.info-popover {
  word-wrap: break-word;
  word-break: break-word;
}
.info-popover-sm, .info-popover-lg {
  max-width: 400px;
}

.default-cursor {
  cursor: default;
}

